src/z80asm/z80asm2/t/40-syntax/expected/defs_numeric_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/defs_numeric_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/defs_numeric_01.asm...
t/40-syntax/input/defs_numeric_01.asm:1:5: error: Expression expected
    defs
        ^
t/40-syntax/input/defs_numeric_01.asm:2:1: error: Unterminated expression after "defs"
    defs ,
    ^
t/40-syntax/input/defs_numeric_01.asm:3:9: error: Unexpected token: ","
    defs 1,2,
            ^
Program
    DefsNumericStmt
        Location: t/40-syntax/input/defs_numeric_01.asm:4:1
        Size:
            ExprBinary: +
                LHS:
                    ExprLiteralInt: 1
                RHS:
                    ExprBinary: *
                        LHS:
                            ExprLiteralInt: 2
                        RHS:
                            ExprLiteralInt: 3
        Filler byte:
            ExprLiteralInt: 0
    DefsNumericStmt
        Location: t/40-syntax/input/defs_numeric_01.asm:5:1
        Size:
            ExprBinary: +
                LHS:
                    ExprLiteralInt: 1
                RHS:
                    ExprBinary: *
                        LHS:
                            ExprLiteralInt: 2
                        RHS:
                            ExprLiteralInt: 3
        Filler byte:
            ExprBinary: +
                LHS:
                    ExprLiteralInt: 2
                RHS:
                    ExprBinary: *
                        LHS:
                            ExprLiteralInt: 3
                        RHS:
                            ExprLiteralInt: 4
